--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts": "^5.5.0",
+    "less-loader": "^12.2.0",
     "pinia": "^2.1.7",
+    "style-resources-loader": "^1.5.0",
     "vant": "^4.8.5",
     "vue": "^3.4.15",
+    "vue-echarts": "^6.6.9",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
+    "less": "^4.2.0",
     "postcss-px-to-viewport": "^1.1.1",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11"
