--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "less": "^4.2.0",
     "postcss-px-to-viewport": "^1.1.1",
+    "sass": "^1.77.8",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11"
   }
